--- a/src/app/pages/category/category-list/category-list.component.html
+++ b/src/app/pages/category/category-list/category-list.component.html
@@ -1,1 +1,50 @@
-<p>category-list works!</p>
+<nav class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item" ><a routerLink="/">Home</a></li>
+        <li class="breadcrumb-item active">Categorias</li>
+    </ol>
+</nav>
+
+<div class="row mb-5">
+    <div class="col-md">
+        <h1 class="h2 border-left pl-4">
+            Categorias
+        </h1>
+    </div>
+    <div class="col-md">
+        <a class="btn btn-success float-right" routerLink="new">
+            + Categoria
+        </a>
+    </div>
+</div>
+
+<table class="table table-houver">
+    <thead>
+        <tr class="bg-primary text-light">
+            <th>Categorias</th>
+            <th>Açães</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <strong>Lazer</strong> <br>
+                <small>Cinema,parque,praia,...</small>
+            </td>
+            <td>
+              <a [routerLink]="[12,'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
+              <a (click)="alert('excluido!')" class="btn btn-outline-danger btn-sm">Editar</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <strong>Lazer</strong> <br>
+                <small>Cinema,parque,praia,...</small>
+            </td>
+            <td>
+              <a [routerLink]="[12,'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
+              <a (click)="alert('excluido!')" class="btn btn-outline-danger btn-sm">Editar</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
