--- a/src/app/pages/category/category-list/category-list.component.html
+++ b/src/app/pages/category/category-list/category-list.component.html
@@ -26,25 +26,16 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr *ngFor="let item of categories">
             <td>
-                <strong>Lazer</strong> <br>
-                <small>Cinema,parque,praia,...</small>
+                <strong>{{item.name}}</strong> <br>
+                <small>{{item.description}}</small>
             </td>
             <td>
-              <a [routerLink]="[12,'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
-              <a (click)="alert('excluido!')" class="btn btn-outline-danger btn-sm">Editar</a>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <strong>Lazer</strong> <br>
-                <small>Cinema,parque,praia,...</small>
-            </td>
-            <td>
-              <a [routerLink]="[12,'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
-              <a (click)="alert('excluido!')" class="btn btn-outline-danger btn-sm">Editar</a>
+              <a [routerLink]="[item.id,'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
+              <a (click)="delete(item)" class="btn btn-outline-danger btn-sm">Editar</a>
             </td>
         </tr>
+       
     </tbody>
 </table>
